# HTFix

./: .gitignore  build.gradle  settings.gradle
annotation/: .gitignore  build.gradle
annotation/src/main/: AndroidManifest.xml
annotation/src/main/java/com/htfix/annotation/: HookClass.java  HookMethod.java  HookMethodBackup.java  HookMode.java  HookReflectClass.java  MethodParams.java  MethodReflectParams.java  Param.java  SkipParamCheck.java  ThisObject.java
app/: build.gradle  release-key.keystore
app/libs/: library-debug.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/htfix/: InputConnectionActivity.java  MainActivity.java
app/src/main/java/com/htfix/hook/: ATest.java  ActivityHooker.java  BTest.java  BaseInputConnectionHooker.java  BaseInputConnectionReplace.java  BaseInputConnectionReplaceYH.java  Hook.java  HookMethodInfo.java  HookTest.java  TextReplaceYH.java
app/src/main/res/layout/: activity_input_connection.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
htfixlib/: .gitignore  build.gradle
htfixlib/src/main/: AndroidManifest.xml
htfixlib/src/main/cpp/: CMakeLists.txt  HTFixHook.cpp
htfixlib/src/main/cpp/art/: ArtMethod.cpp  ArtMethod.h  ArtMethodOffSet.cpp  ArtMethodOffSet.h  art_compiler_options.cpp  cast_compiler_options.cpp
htfixlib/src/main/cpp/base/: arch.h  arch_base.h  base.h  cast.h  lock.h  utils.cpp  utils.h
htfixlib/src/main/cpp/fake/: ElfUtil.cpp  ElfUtil.h  HideApi.cpp  HideApi.h  dlfcn_nougat.cpp
htfixlib/src/main/cpp/hook/: HTFixMethodHook.cpp  HTFixMethodHook.h  MethodHook.cpp  MethodHook.h  MethodTrampoline.cpp  MethodTrampoline.h  native_on_load.cpp  native_on_load.h
htfixlib/src/main/cpp/hook/art/: ArtMethod.h  MethodHook.cpp  MethodHook.h  MethodTrampoline.cpp  MethodTrampoline.h  constants.h
htfixlib/src/main/cpp/hook/dalvik/: DalvikMethodReplace.cpp  DalvikMethodReplace.h  dalvik.h
htfixlib/src/main/cpp/includes/: art_compiler_options.h  art_jit.h  art_runtime.h  cast_compiler_options.h  inst.h  lock.h  never_call.h
htfixlib/src/main/cpp/insts/: insts_arm32.cpp  insts_arm64.cpp
htfixlib/src/main/cpp/trampoline/: TrampolineManager.cpp  TrampolineManager.h  trampoline.h
htfixlib/src/main/cpp/trampoline/arch/: arm32.S  arm64.S
htfixlib/src/main/java/com/htfixlib/: ArtMethodSize.java  HTFixHook.java  HTFixNative.java
htfixlib/src/main/java/com/htfixlib/blacklist/: HookBlackList.java
htfixlib/src/main/java/com/htfixlib/offset/: HTFixMethodResolver.java  NeverCallClass.java
htfixlib/src/main/java/com/htfixlib/utils/: ArtMethodUtils.java  FileUtils.java  HTFixHookConfig.java  HookLog.java  ReflectionUtils.java
htfixlib/src/main/java/com/htfixlib/wrapper/: HookErrorException.java  HookWrapper.java  StubMethodsFactory.java
htfixlib/src/main/res/values/: strings.xml
whooklib/: CMakeLists.txt  build.gradle
whooklib/src/main/: AndroidManifest.xml
whooklib/src/main/cpp/: CMakeLists.txt
whooklib/src/main/cpp/android/art/: scoped_thread_state_change.cc
whooklib/src/main/res/values/: strings.xml
